dataset1235/2025-2/1153765216/users/3623738290/executions/3138746197_359632665.log
== RUN (2025-08-19 18:00:35)
-- CODE: 
print(round(250//6,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:01:19)
-- CODE: 
print(round(250/6,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:41:39)
-- CODE: 
print(round(250,002/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(round(250,002/6))
                    ^^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(round(250,002/6))
                    ^^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:46:15)
-- CODE: 
print(round(250.2//6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:25:52)
-- CODE: 
print(250/6)
round(41.666666666666664)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:31:18)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:26:54)
-- CODE: 
round(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:26:15)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:43:36)
-- CODE: 
print(round(250//6))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:49:22)
-- CODE: 
print(round(250.002//6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:35:04)
-- CODE: 
print(round(250.00/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:33:35)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:26:56)
-- CODE: 
round(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:47:48)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:48:48)
-- CODE: 
print(round(250.02//6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:45:11)
-- CODE: 
print(round(250,2/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(250,2/6))
          ^^^^^^^^^^^^^^
TypeError: 'float' object cannot be interpreted as an integer
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(250,2/6))
          ^^^^^^^^^^^^^^
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:48:35)
-- CODE: 
print(round(250.02/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:48:55)
-- CODE: 
print(round(250.2//6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:45:15)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:45:33)
-- CODE: 
print(round(250,2/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(250,2/6))
          ^^^^^^^^^^^^^^
TypeError: 'float' object cannot be interpreted as an integer
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(250,2/6))
          ^^^^^^^^^^^^^^
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:40:07)
-- CODE: 
print(round(250,2/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(250,2/6))
          ^^^^^^^^^^^^^^
TypeError: 'float' object cannot be interpreted as an integer
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(250,2/6))
          ^^^^^^^^^^^^^^
TypeError: 'float' object cannot be interpreted as an integer
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:28:20)
-- CODE: 
print(round(250/6)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(round(250/6)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(round(250/6)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:25:59)
-- CODE: 
print(250/6)
round(41.666666666666664)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:34:33)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:23:49)
-- CODE: 
print(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:48:56)
-- CODE: 
print(round(250.2//6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:35:08)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:31:14)
-- CODE: 
print(round250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round250/6)
          ^^^^^^^^
NameError: name 'round250' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round250/6)
          ^^^^^^^^
NameError: name 'round250' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:00:02)
-- CODE: 
print(round(250//6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:01:09)
-- CODE: 
print(round(250/6,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:46:39)
-- CODE: 
print(round(250.2/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:49:07)
-- CODE: 
print(round(250.2/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:28:27)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:26:02)
-- CODE: 
print(250/6)
round(41.666666666666664)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:33:27)
-- CODE: 
print(round(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(round(250/6)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(round(250/6)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:43:28)
-- CODE: 
print(round(250//6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:37:16)
-- CODE: 
print(250/6(round))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(250/6(round))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(250/6(round))
              ^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(250/6(round))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(250/6(round))
              ^^^^^^^^
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:45:36)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:41:10)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:45:51)
-- CODE: 
print(round(250,2/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(250,2/6))
          ^^^^^^^^^^^^^^
TypeError: 'float' object cannot be interpreted as an integer
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(250,2/6))
          ^^^^^^^^^^^^^^
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:33:30)
-- CODE: 
print(round(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(round(250/6)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(round(250/6)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 17:59:45)
-- CODE: 
print(round(250/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:44:00)
-- CODE: 
print(250//6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:00:53)
-- CODE: 
print(round(250//6.2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
40
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:40:48)
-- CODE: 
print(round(250.00/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:34:07)
-- CODE: 
print(round(250/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:37:20)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:41:44)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
